# beat_this_onnxconvert

./: BEAT_THIS_CALCULATION_PATH_MEMO.md  BEAT_THIS_CPP_IMPL_SPEC_PLAN.md  README.md  pyproject.toml  requirements.txt
beat_this/model/: onnx_export.py
cpp_root/include/STFT/: EXP10.okl  EXP11.okl  EXP6.okl  EXP7.okl  EXP8.okl  EXP9.okl  EXPCommon.okl  STFT_MAIN.okl  kernel.okl  okl_kernel_build.sh
cpp_root/include/STFT/GenOut/METAL/: STFT_MAIN_METAL.hpp
cpp_root/include/STFT/GenOut/OpenCL/: STFT_MAIN.cl
cpp_root/include/STFT/GenOut/SERIAL/: STFT_MAIN_SERIAL.hpp
cpp_root/include/stft_wrapper/: BackendLess.cpp  BackendLess.hpp  ConfigurableSerialStft.cpp  ConfigurableSerialStft.hpp  MelFilterBank.hpp  OpenclArgChains.hpp  OpenclBackend.cpp  OpenclBackend.hpp  STFT_Parallel.cpp  STFT_Parallel.hpp  STFT_args.hpp  SerialBackend.cpp  SerialBackend.hpp
launch_scripts/: export_onnx_model.py
re-impl/cpp_beat_this_preprocess/: CMakeLists.txt  conanfile.py  conanfile.txt
re-impl/cpp_beat_this_preprocess/include/beat_this_inference/: export.hpp  inference.hpp  postprocessor.hpp
re-impl/cpp_beat_this_preprocess/include/beat_this_preprocess/: preprocessor.hpp
re-impl/cpp_beat_this_preprocess/src/: inference.cpp  postprocessor.cpp  preprocessor.cpp
re-impl/cpp_beat_this_preprocess/src/internal/: aggregate.cpp  aggregate.hpp  common.cpp  common.hpp  decode.cpp  decode.hpp  frontend.cpp  frontend.hpp  onnx_session.cpp  onnx_session.hpp  soxr_resampler.cpp  soxr_resampler.hpp  split.cpp  split.hpp  waveform.cpp  waveform.hpp
re-impl/cpp_beat_this_preprocess/tests/: beats_dump_main.cpp  beats_tsv_dump_main.cpp  compare_cpp_python_beats_tsv.py  compare_cpp_python_logits.py  compare_cpp_python_minimal_beats.py  compare_cpp_python_spectrogram.py  inference_test_main.cpp  logits_dump_main.cpp  test_main.cpp
re-impl/cpp_beat_this_preprocess/tools/: beat_this_dump_main.cpp
tests/: test_inference.py  test_onnx_export.py
